--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery-num-sort",
+  "name": "jquery-sort-descending-ascending",
   "version": "1.0.3",
   "description": "Sort an array from ascending or descending order",
   "main": "index.js",
